# rag-production-grade

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: init_db.sql
src/app/: config.py  main.py
src/app/api/v1/: health.py  ingest.py  query.py
src/app/core/: exceptions.py  logging.py  telemetry.py  tracing.py
src/app/db/: engine.py  models.py
src/app/rag/generation/: generator.py
src/app/rag/ingestion/: chunker.py  embedder.py  loader.py
src/app/rag/retrieval/: retriever.py
tests/: conftest.py
tests/integration/: test_ingest.py  test_query.py
tests/unit/: test_chunker.py  test_telemetry.py  test_tracing.py
