[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-production-grade"
version = "0.1.0"
description = "Production-grade RAG system — AI Engineering portfolio"
requires-python = ">=3.11"

# --- CORE DEPENDENCIES ---
# Volontairement minimal à cette phase : on n'installe LangChain/LlamaIndex
# que quand leurs features sont construites, pour garder l'image Docker légère.
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",      # [standard] inclut uvloop + httptools (perf production)
    # Validation & settings Pydantic v2
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",       # Séparé de pydantic depuis v2 — gère le .env
    # PostgreSQL async — utilisé par pgvector
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "pgvector>=0.3.0",
    # Client HTTP (utilisé par les health checks et les futures intégrations)
    "httpx>=0.27.0",
    # Logging structuré : JSON en production, lisible en dev
    "structlog>=24.2.0",
]

[project.optional-dependencies]
# Installer avec : pip install -e ".[dev]"
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "faker>=25.0.0",
]

# Activé en Phase 2 — pipeline RAG
rag = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    # langchain-text-splitters est le package séparé pour RecursiveCharacterTextSplitter
    # (extrait de langchain core depuis la v0.2 pour réduire les dépendances)
    "langchain-text-splitters>=0.2.0",
    "llama-index>=0.10.0",
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "pypdf>=4.2.0",
    "python-multipart>=0.0.9",
]

# Activé en Phase 3 — observabilité
observability = [
    "langsmith>=0.1.0",
    "langfuse>=2.0.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]

# Activé en Phase 4 — évaluation
eval = [
    "ragas>=0.1.0",
    "deepeval>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# --- RUFF ---
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear (bugs subtils)
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (syntaxe moderne)
    "N",   # pep8-naming
]
ignore = [
    "E501",  # longueur de ligne — géré par le formatter
    "B008",  # appels de fonctions dans les defaults args (pattern FastAPI)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --- PYTEST ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/app",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--strict-markers",
    "-v",
]
markers = [
    "unit: rapide, sans I/O",
    "integration: nécessite les services (DB, etc.)",
    "slow: tests lents, exclus par défaut",
]

# --- MYPY ---
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
